{
    "name": "VRInputActions",
    "maps": [
        {
            "name": "VRController",
            "id": "a70353b5-51a2-43c5-91f0-f09e17284bc1",
            "actions": [
                {
                    "name": "Teleport",
                    "type": "Button",
                    "id": "8a9740da-18df-4d7e-be87-1d55c6f7b2ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickTurn",
                    "type": "Value",
                    "id": "5c042795-e336-4f54-ac2d-6b48833edebd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SpawnChair",
                    "type": "Button",
                    "id": "f4386d58-0d5a-4e65-a9fb-872683115296",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnOculusRift",
                    "type": "Button",
                    "id": "5ad01e75-6d98-4e37-bd70-d48e5a066aff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IndexTrigger",
                    "type": "Value",
                    "id": "74e078cf-a5f4-4eae-afa8-b2840ae8b20c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "HandTrigger",
                    "type": "Value",
                    "id": "96dd3ab6-797d-4af4-9d9f-42ece362309c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightJoyStick",
                    "type": "Value",
                    "id": "ee7a42dc-2315-470b-a8fe-cfcfceffadfb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21e67634-cfc7-41c1-8c34-10d9bff1f1a3",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerLeft>{LeftHand}/triggerpressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Teleport",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9bf8ff3d-121f-455e-8553-25d8145a9b4c",
                    "path": "<XRController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d2badd1-684b-4367-bf24-93e1b67c010c",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnChair",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36b8b17a-951e-425d-8086-59bb51f30abb",
                    "path": "<OculusTouchController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnOculusRift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0330448f-e9ff-45dc-b0fb-8e5c557edb3f",
                    "path": "<OculusTouchController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IndexTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfcb94a4-295a-45b1-b915-51633fddbf8a",
                    "path": "<OculusTouchController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63554b5f-0506-4836-8b14-dbbaef069f88",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}